--- a/shop.html
+++ b/shop.html
@@ -63,70 +63,56 @@
       </header>
 
       <main class="container">
-        <h1 class="h3">Home</h1>
+        <h1 class="h3">Shop</h1>
         <hr />
-        <form>
-            <div class="form-group">
-                <div class="row">
-                    <div class="col-10">
-                        <input type="text" class="form-control" placeholder="Your blog post here..." />
+        <div class="row p-3 mt-3">
+            <div class="col-4">
+                <div class="card">
+                    <div class="card-header">
+                        <strong>
+                            Marty McFly
+                            <span class="price float-right">$499</span>
+                        </strong>
                     </div>
-                    <div class="col-2">
-                        <input type="button" class="btn btn-info btn-block" value="Post" />
+                    <div class="card-body">
+                        <img src="https://files.stripe.com/links/MDB8YWNjdF8xSkNVZVpJbmJlTnlCRThhfGZsX3Rlc3RfaGlLaGs3eXhHelVEVUt4Z1hjeUx5NUtv001v8BKXyd" alt="Marty McFly" class="img-fluid">
+                        <a href="" class="btn btn-block btn-success my-3">Add To Cart</a>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
             </div>
-        </form>
-        <hr />
-
-        <ul class="list-group">
-            <li class="list-group-item">
-                <p>
-                    <a href="#">This is a post</a>
-                </p>
-                <div>
-                    <cite>&mdash; Lucas Lang</cite>
-                    <span class="float-right">4 minutes ago</span>
+            <div class="col-4">
+                <div class="card">
+                    <div class="card-header">
+                        <strong>
+                            GoFly Ease
+                            <span class="price float-right">$99</span>
+                        </strong>
+                    </div>
+                    <div class="card-body">
+                        <img src="https://files.stripe.com/links/MDB8YWNjdF8xSkNVZVpJbmJlTnlCRThhfGZsX3Rlc3Rfcm95RmRjc0xHcktMRWUyNGUxV2E4ZzN100bLg1gsgo" alt="GoFly Ease" class="img-fluid">
+                        <a href="" class="btn btn-block btn-success my-3">Add To Cart</a>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
                 </div>
-            </li>
-            <li class="list-group-item">
-                <p>
-                    <a href="#">This is a post</a>
-                </p>
-                <div>
-                    <cite>&mdash; Lucas Lang</cite>
-                    <span class="float-right">4 minutes ago</span>
+            </div>
+            <div class="col-4">
+                <div class="card">
+                    <div class="card-header">
+                        <strong>
+                            AirMax Moscow
+                            <span class="price float-right">$199</span>
+                        </strong>
+                    </div>
+                    <div class="card-body">
+                        <img src="https://files.stripe.com/links/MDB8YWNjdF8xSkNVZVpJbmJlTnlCRThhfGZsX3Rlc3RfRDFudUZJNFNpV1NocnlkQ2ZUalhuQjNm00sSkffBfK" alt="AirMax Moscow" class="img-fluid">
+                        <a href="" class="btn btn-block btn-success my-3">Add To Cart</a>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
                 </div>
-            </li>
-            <li class="list-group-item">
-                <p>
-                    <a href="#">This is a post</a>
-                </p>
-                <div>
-                    <cite>&mdash; Lucas Lang</cite>
-                    <span class="float-right">4 minutes ago</span>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <p>
-                    <a href="#">This is a post</a>
-                </p>
-                <div>
-                    <cite>&mdash; Lucas Lang</cite>
-                    <span class="float-right">4 minutes ago</span>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <p>
-                    <a href="#">This is a post</a>
-                </p>
-                <div>
-                    <cite>&mdash; Lucas Lang</cite>
-                    <span class="float-right">4 minutes ago</span>
-                </div>
-            </li>
-        </ul>
-
+            </div>
+            </div>
+        </div>
       </main>
 
       <footer class="bg-dark">
